ensure overlay covers menu when modal is open

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -26,7 +26,7 @@
 }
 .modal.open {
   opacity: 1;
-  z-index: 3;
+  z-index: 5;
 }
 
 .modal-buttons-container {
